# customer_voice_AI

./: .env.example  .gitignore  Customer_Voice_AI_Описание.md  Makefile  README.md  README.ru.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 23b9416d5a9d_add_complaint_embedding_vector.py  29bad8071729_create_topics_table.py  725f8e5aa178_create_classification_events_table.py  770ee153e28c_create_uncertain_classifications_table.py  87af375705e5_widen_complaint_text_fields.py  9fdaa002a54b_repair_known_classification_topic_match_.py  a27f7ff8c685_add_complaint_embedding_hnsw_index.py  af4208c3615d_create_complaints_table.py  caf58829c37b_add_csi_fields_to_complaints.py  fb5fd1b1b99f_create_agent_feedback_table.py  fe92afbedd02_add_topic_embedding_vector.py
scripts/: backfill_csi_fields.py  backfill_topic_embeddings.py  run_langgraph_agent.py
src/customer_voice_ai/: analytics.py
src/customer_voice_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/customer_voice_ai/agent/: complaint_analysis_agent.py  complaint_summarizer.py  langgraph_agent.py  llm_answer_composer.py
src/customer_voice_ai/api/: main.py  routes.py  schemas.py
src/customer_voice_ai/core/: config.py  logging.py
src/customer_voice_ai/data/: build_classification_dataset.py  download_cfpb.py  ingest_cfpb.py  load_complaints_to_db.py  load_embeddings_to_db.py  prepare_cfpb_sample.py
src/customer_voice_ai/db/: models.py  session.py  (+4 more)
tests/: test_api.py  test_langgraph_agent.py  test_routing_logic.py
(+10 files in other folders)
