[project]
name = "customer-voice-ai"
version = "0.1.0"
description = "Customer feedback analytics platform with dynamic NLP classification and AI agent."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]